add club banner

--- a/about.html
+++ b/about.html
@@ -113,53 +113,60 @@
       <!--== End Page Title Area ==-->
 
       <!--== Start About Area ==-->
-      <section class="about-area about-default-area">
+      <section class="about-area">
         <div class="container">
           <div class="row">
             <div class="col-lg-9">
-              <div class="section-title position-relative z-index-1" data-aos="fade-up" data-aos-duration="1000">
+              <div class="section-title">
                 <h5 class="subtitle line-theme-color">About Us.</h5>
                 <h2 class="title"><span>MR Leos</span> Welcome to the Leo Club of Moratuwa Rathmalana.</h2>
               </div>
             </div>
           </div>
           <div class="row">
-            <div class="col-lg-6 col-xl-7">
-              <div class="layer-style" data-aos="fade-up" data-aos-duration="1100">
-                <div class="thumb">
-                  <div class="row m-0">
-                    <div
-                      class="col-sm-4 col-md-4 col-lg-4 col-xl-4 p-0 d-none d-sm-block d-lg-none d-xl-block tilt-animation">
-                      <img src="assets/img/about/1.jpg" alt="Image-Givest">
+            <div class="col-lg-4">
+              <div class="thumb thumb-style">
+                <img src="assets/img/about/3.jpg" alt="Image-Givest">
+              </div>
+            </div>
+            <div class="col-lg-8">
+              <div class="about-content">
+                <p class="text-style">The power to turn a vision into reality is what makes a person a leader.</p>
+                <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306 A1. From the beginning, Sri Lanka has
+                  been
+                  associated with Leo Multiple District 306, Sri Lanka.
+                  The Leo Club of Moratuwa-Rathmalana was founded on June 12, 1970, with the Lions Club of Moratuwa-Rathamalana in
+                  District 306 A1 providing sponsorship.</p>
+                <p class="mb-0">So far, we've accomplished a lot under the leadership and guidance of many people, and we're still
+                  committed to
+                  maintaining our high standards with 50+ years of excellence.</p>
+              </div>
+              <div class="content-box-wrp">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="content-box-item mb-md-30">
+                      <h3 class="title">Mission</h3>
+                      <img class="img-line-shape" src="assets/img/shape/line-s1.png" alt="Image-Givest">
+                      <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry has been the industry's
+                        standard dummy text ever since 1500 when unknown printer took a galley of type and scram bled it to
+                        make a type specimen book.</p> -->
+                      <p class="font-family2 mb-0">EMPOWER THE YOUTH WITH SELF-DRIVEN, PRACTICAL EXPERIENCES AND OPPORTUNITIES TO TRANSFORM THEIR LIVES AND DEVELOP LEADERSHIP QUALITIES
+                        WHILE VOLUNTEERING IN SERVING THE COMMUNITY.</p>
+                      <img class="bg-line-shape" src="assets/img/shape/line5.png" alt="Image-Givest">
                     </div>
-                    <div class="col-sm-8 col-md-8 col-lg-12 col-xl-8 p-0 tilt-animation">
-                      <img class="img-two" src="assets/img/about/2.jpg" alt="Image-Givest">
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="content-box-item" data-bg-color="#fea444">
+                      <h3 class="title">Vission</h3>
+                      <img class="img-line-shape" src="assets/img/shape/line-s1.png" alt="Image-Givest">
+                      <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry has been the industry's
+                        standard dummy text ever since 1500 when unknown printer took a galley of type and scram bled it to
+                        make a type specimen book.</p> -->
+                      <p class="font-family2 mb-0">CREATE A COMMUNITY OF GLOBAL LEADERS.</p>
+                      <img class="bg-line-shape" src="assets/img/shape/line5.png" alt="Image-Givest">
                     </div>
                   </div>
                 </div>
-              </div>
-            </div>
-            <div class="col-lg-6 col-xl-5">
-              <div class="about-content" data-aos="fade-up" data-aos-duration="1100">
-                <p class="text-style">The power to turn a vision into reality is what makes a person a leader.</p>
-                <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306A1. From the beginning, Sri
-                  Lanka has been
-                  associated with Leo Multiple District 306, Sri Lanka.
-                  The Leo Club of Moratuwa-Rathmalana was founded on June 12, 1970, with the Lions Club of
-                  Moratuwa-Rathamalana in
-                  District 306 A1 providing sponsorship.</p>
-                <p class="mb-0">So far, we've accomplished a lot under the leadership and guidance of many people, and we're
-                  still committed to
-                  maintaining our high standards with 50+ years of excellence.</p>
-                <ul class="list-icon-style">
-                  <li><img class="icon-img" src="assets/img/icons/check-double-line.png" alt="Image-Givest">
-                    Right decision shows <br>excellent leadership.</li>
-                  <li class="line-center"></li>
-                  <li><img class="icon-img" src="assets/img/icons/check-double-line.png" alt="Image-Givest"> By the community,
-                    <br>for the community.</li>
-                </ul>
-                <a href="contact.html" class="btn-theme btn-gradient btn-slide">Contact Us <img class="icon icon-img"
-                    src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
               </div>
             </div>
           </div>
@@ -422,7 +429,7 @@
       <!--== End Gallery Area ==-->
 
       <!--== Start Brand Logo Area ==-->
-      <section class="brand-logo-area brand-logo-default-area">
+      <!-- <section class="brand-logo-area brand-logo-default-area">
         <div class="container">
           <div class="row">
             <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-4 offset-lg-0 col-xl-4">
@@ -489,7 +496,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!--== End Brand Logo Area ==-->
     </main>
 
@@ -516,45 +523,40 @@
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
               <div class="widget-item">
-                <h4 class="widget-title line-style">Gallery</h4>
+                <h4 class="widget-title line-style">Social Media</h4>
                 <div class="widget-gallery">
                   <div class="row row-cols-3 row-gutter-10">
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery1.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.facebook.com/leoclubofmoratuwarathmalana"><i
+                            class="icofont-facebook"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery2.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.linkedin.com/company/leo-club-of-moratuwa-ratmalana"><i
+                            class="icofont-linkedin"></i></a>
                       </div>
                     </div>
+                    <div></div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery3.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.instagram.com/mr_leos_/"><i class="icofont-instagram"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery4.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.youtube.com/channel/UCjj_tHYJgEfiUk3FwWzN-VQ"><i
+                            class="icofont-youtube"></i></a>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery5.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery6.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
+            
+                    <div></div>
+            
                   </div>
                 </div>
               </div>
