--- a/projects.html
+++ b/projects.html
@@ -569,45 +569,40 @@
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
               <div class="widget-item">
-                <h4 class="widget-title line-style">Gallery</h4>
+                <h4 class="widget-title line-style">Social Media</h4>
                 <div class="widget-gallery">
-                  <div class="row row-cols-2 row-gutter-10">
+                  <div class="row row-cols-3 row-gutter-10">
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery1.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.facebook.com/leoclubofmoratuwarathmalana"><i
+                            class="icofont-facebook"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery2.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.linkedin.com/company/leo-club-of-moratuwa-ratmalana"><i
+                            class="icofont-linkedin"></i></a>
                       </div>
                     </div>
+                    <div></div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery3.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.instagram.com/mr_leos_/"><i class="icofont-instagram"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery4.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.youtube.com/channel/UCjj_tHYJgEfiUk3FwWzN-VQ"><i
+                            class="icofont-youtube"></i></a>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery5.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery6.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
+            
+                    <div></div>
+            
                   </div>
                 </div>
               </div>
