--- a/committee.html
+++ b/committee.html
@@ -96,7 +96,7 @@
 
     <main class="main-content site-wrapper-reveal">
       <!--== Start Page Title Area ==-->
-      <section class="page-title-area" data-bg-img="assets/img/photos/bg-page-title.jpg">
+      <!-- <section class="page-title-area" data-bg-img="assets/img/photos/bg-page-title.jpg">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -108,7 +108,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!--== End Page Title Area ==-->
 
 
