changed about us css

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
       <!--== Start About Area ==-->
       <!-- <section class="about-area about-default-area"></section> -->
-      <section class="about-default-area">
+      <section class="about-area about-default-area">
         <div class="container">
           <div class="row">
             <div class="col-lg-9">
