home page done (Video div not completed)

--- a/projects.html
+++ b/projects.html
@@ -730,7 +730,7 @@
 
   <!--=== Custom Js ===-->
   <script src="assets/js/custom.js"></script>
-  <script src="assets/js/fb-albums.js"></script>
+  <script src="assets/js/projects.js"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 
 </body>
