about us css changed

--- a/about.html
+++ b/about.html
@@ -156,7 +156,7 @@
                     </div>
                   </div>
                   <div class="col-lg-6">
-                    <div class="content-box-item" data-bg-color="#fea444">
+                    <div class="content-box-item" data-bg-color="#00b356">
                       <h3 class="title">Vission</h3>
                       <img class="img-line-shape" src="assets/img/shape/line-s1.png" alt="Image-Givest">
                       <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry has been the industry's
@@ -424,6 +424,9 @@
 
 
           </div>
+          <a href="https://www.facebook.com/leoclubofmoratuwarathmalana/photos/?ref=page_internal" target="_blank">
+            <p class="text-center fs-5 mt-3 text-white"><u>See more projects</u></p>
+          </a>
         </div>
       </section>
       <!--== End Gallery Area ==-->
