Baratha : Watch now button

--- a/index.html
+++ b/index.html
@@ -835,7 +835,7 @@
                   html += '<div id="video_box" class="event-item">';
                   html += '<div class="thumb">';
                   html += '  <img class="thumb-img" src="'+thumb+'" alt="Image-Givest">';
-                  html += '  <a href="'+youtubeLink+'" target="_blank" class="btn-theme btn-gradient btn-size-sm">Join Now <img';
+                  html += '  <a href="'+youtubeLink+'" target="_blank" class="btn-theme btn-gradient btn-size-sm">Watch now <img';
                   html += '      class="icon icon-img" src="assets/img/icons/arrow-line-right.png" alt="Icon"></a>';
                   html += '</div>';
                   html += '<div class="content">';
