--- a/committee.html
+++ b/committee.html
@@ -274,56 +274,52 @@
                   <a class="footer-logo" href="index.html">
                     <img src="assets/img/logo.png" alt="Logo">
                   </a>
-                  <p>Lorem Ipsum is simply dummy text of the industry orem Ipsum has been the industry's since the when
-                    unknown.</p>
-                  <div class="widget-total-raised">
-                    <h4 class="raised-title">Total Raised:</h4>
-                    <div class="raised-amount">$8,965</div>
-                  </div>
+                  <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306 A1, founded on June 12,
+                    1970.</p>
+                  <p>Leo Club of Moratuwa-Rathamalana has been serving the community for over 50 years.</p>
+                  <!-- <div class="widget-total-raised">
+                        <h4 class="raised-title">Total Raised:</h4>
+                        <div class="raised-amount">$8,965</div>
+                      </div> -->
                 </div>
               </div>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
               <div class="widget-item">
-                <h4 class="widget-title line-style">Gallery</h4>
+                <h4 class="widget-title line-style">Social Media</h4>
                 <div class="widget-gallery">
                   <div class="row row-cols-3 row-gutter-10">
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery1.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.facebook.com/leoclubofmoratuwarathmalana"><i
+                            class="icofont-facebook"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery2.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.linkedin.com/company/leo-club-of-moratuwa-ratmalana"><i
+                            class="icofont-linkedin"></i></a>
                       </div>
                     </div>
+                    <div></div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery3.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.instagram.com/mr_leos_/"><i class="icofont-instagram"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery4.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.youtube.com/channel/UCjj_tHYJgEfiUk3FwWzN-VQ"><i
+                            class="icofont-youtube"></i></a>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery5.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery6.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
+    
+                    <div></div>
+    
                   </div>
                 </div>
               </div>
@@ -335,24 +331,24 @@
                   <div class="row">
                     <div class="col-6 col-sm-6 col-md-6 pr-sm-5">
                       <ul class="nav-menu nav">
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="blog.html">Blog Post Terms</a></li>
-                        <li><a href="#/">Conditions</a></li>
-                        <li><a href="#/">Privacy Policy</a></li>
-                        <li><a href="#/">Documentation</a></li>
-                        <li><a href="#/">Donners</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <li><a href="event-details.html">Events</a></li>
+                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="contact.html">Contact US</a></li>
                       </ul>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
-                      <ul class="nav-menu nav align-right">
-                        <li><a href="volunteer.html">Become Volunteer</a></li>
-                        <li><a href="#/">Quick Fundraise</a></li>
-                        <li><a href="#/">Give Donation</a></li>
-                        <li><a href="volunteer.html">Become Volunteer</a></li>
-                        <li><a href="causes-details.html">Food And Water</a></li>
-                        <li><a href="causes-details.html">Medical facilities</a></li>
-                      </ul>
-                    </div>
+                    <!-- <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
+                          <ul class="nav-menu nav align-right">
+                            <li><a href="volunteer.html">Become Volunteer</a></li>
+                            <li><a href="#/">Quick Fundraise</a></li>
+                            <li><a href="#/">Give Donation</a></li>
+                            <li><a href="volunteer.html">Become Volunteer</a></li>
+                            <li><a href="causes-details.html">Food And Water</a></li>
+                            <li><a href="causes-details.html">Medical facilities</a></li>
+                          </ul>
+                        </div> -->
                   </div>
                 </nav>
               </div>
@@ -368,8 +364,8 @@
             <div class="row align-items-center">
               <div class="col-12">
                 <div class="widget-copyright text-center">
-                  <p>© 2025 <span>Givest</span>. Made with <i class="icon_heart"></i> by <a target="_blank"
-                      href="https://www.hasthemes.com">HasThemes</a></p>
+                  <p>copyright © 2021 <span>Leo Club of Moratuwa Ratmalana</span> | <a target="_blank"
+                      href="https://www.leos.moratuwaratmalana.lk">Developed MRLeos IT Team</a></p>
                 </div>
               </div>
             </div>
