--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>MRLeos – Leo Club of Moratuwa Rathmalana</title>
+  <title>MRLeos – Leo Club of Moratuwa Ratmalana</title>
 
   <!--== Favicon ==-->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
@@ -35,7 +35,6 @@
   <link href="assets/css/style.css" rel="stylesheet" />
   <link href="assets/css/custom.css" rel="stylesheet" />
   <link href="assets/css/slider.css" rel="stylesheet" />
-
 
 </head>
 
@@ -100,45 +99,63 @@
     <main class="main-content">
       <!--== Start Slider ==-->
       <section class="home-slider-area slider-default">
-        <div class="container">
-          <div class="wrapper1">
-            <div class="divimage">
-              <!-- <img src="assets/img/slider/slide_01.jpg" alt="..."> -->
-              <div class="mySlides fade">
-                <!-- <div class="numbertext">1 / 3</div> -->
-                <img src="assets/img/slider/slide_01.jpg" style="width:100%">
-                <!-- <div class="text">Caption Text</div> -->
-              </div>
+        <div class="home-slider-content">
+          <!-- Start Slide Item -->
+          <div class="home-slider-item">
+            <div class="slider-content-area">
+              <div class="container">
+                <div class="row">
+                  <div class="divimage">
+                    <!-- <img src="assets/img/slider/slide_01.jpg" alt="..."> -->
+                    <div class="mySlides fade">
+                      <!-- <div class="numbertext">1 / 3</div> -->
+                      <img src="assets/img/slider/slide_01.jpg" style="width:100%">
+                      <!-- <div class="text">Caption Text</div> -->
+                    </div>
 
-              <div class="mySlides fade">
-                <!-- <div class="numbertext">2 / 3</div> -->
-                <img src="assets/img/slider/slide_02.jpg" style="width:100%">
-                <!-- <div class="text">Caption Two</div> -->
-              </div>
+                    <div class="mySlides fade">
+                      <!-- <div class="numbertext">2 / 3</div> -->
+                      <img src="assets/img/slider/slide_02.jpg" style="width:100%">
+                      <!-- <div class="text">Caption Two</div> -->
+                    </div>
 
-              <div class="mySlides fade">
-                <!-- <div class="numbertext">3 / 3</div> -->
-                <img src="assets/img/slider/slide_03.jpg" style="width:100%">
-                <!-- <div class="text">Caption Three</div> -->
-              </div>
-            </div>
-            <div class="divtext">
-              <!-- <div class="subtitle-content">
-                <img src="assets/img/icons/1.png" alt="Givest-HasTech">
-                <h6 class="text-white">Begin the Journey with the First Step</h6>
-              </div> -->
-              <div class="section-title ">
-                <h2 class="title text-white"><span>Welcome</span> to the <br>Leo Club of <br> Moratuwa Rathmalana
-                </h2>
+                    <div class="mySlides fade">
+                      <!-- <div class="numbertext">3 / 3</div> -->
+                      <img src="assets/img/slider/slide_03.jpg" style="width:100%">
+                      <!-- <div class="text">Caption Three</div> -->
+                    </div>
 
+                  </div>
+                  <!-- TEXT THROUH SLIDER -->
+                  <div class="col-md-6 col-lg-6 col-xl-7">
+                    <div class="content" data-aos="fade-right" data-aos-duration="1000">
+                      <div class="subtitle-content">
+                        <img src="assets/img/icons/1.png" alt="Givest-HasTech">
+                        <h6>Begin with First Step.</h6>
+                      </div>
+                      <div class="tittle-wrp">
+                        <!-- <h2>Need Your Big Hand For <span>Change</span> The World.</h2> -->
+                        <h2 class="text-white">Welcome to the <span>Leo Club of</span> Moratuwa Ratmalana</h2>
+                      </div>
+                      <div class="btn-wrp">
+                        <a href="application.html" class="btn-theme btn-gradient btn-slide">Join Now <img
+                            class="icon icon-img" src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
+                        <!-- <a href="#/" class="btn-theme btn-border btn-black btn-style">Donate Now <img
+                                                                class="icon icon-img" src="assets/img/icons/arrow-right-line-dark.png" alt="Icon"></a> -->
+                      </div>
+                    </div>
+                  </div>
+
+                  <!-- Tripple dot  -->
+                  <div style="text-align:center">
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                    <span class="dot"></span>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-        <div style="text-align:center">
-          <span class="dot"></span>
-          <span class="dot"></span>
-          <span class="dot"></span>
         </div>
       </section>
 
@@ -233,7 +250,6 @@
         </div>
       </section>
       <!--== End Service Area ==-->
-
       <!--== Start About Area ==-->
       <!-- <section class="about-area about-default-area"></section> -->
       <section class="about-area about-default-area">
@@ -307,9 +323,11 @@
           <div class="row" data-aos="fade-up" data-aos-duration="1000" id="blog_post_list">
 
           </div>
-          <a href="projects.html">
-            <p class="text-center fs-5 mt-3"><u>See more projects</u></p>
-          </a>
+          <div class="d-flex justify-content-center">
+            <a href="projects.html" class="btn-theme btn-gradient btn-slide">See More <img class="icon icon-img"
+                src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
+          </div>
+
 
         </div>
       </section>
@@ -336,19 +354,22 @@
                       <div class="swiper-slide testimonial-single">
                         <div class="client-thumb-wrp">
                           <div class="client-thumb">
-                            <img src="assets/img/testimonial/1.png" alt="Image-Givest">
+                            <img src="assets/img/testimonial/1.jpg" alt="Image-Givest">
                           </div>
                           <div class="quote-icon">“</div>
                         </div>
                         <div class="client-content">
-                          <p>The leap into electronic typesetting, essentially unchanged was popularised the release
-                            Letraset
-                            sheets containing and more recently desktop publishing like Aldus maker including.</p>
+                          <p>Leo club of Moratuwa-Rathmalana is one of the longest standing clubs in the history of
+                            Leoism in Sri Lanka, now its even
+                            stronger with its new member base after its reactivation in 2020/2021, and under the
+                            Leadership of Leo Baratha
+                            Aberathna for the year 2021/2022, the club has set forth many initiatives and its on the
+                            path to greater heights.</p>
                         </div>
                         <div class="client-info">
                           <img class="shape-line-img" src="assets/img/shape/line-t1.png" alt="Image-Givest">
-                          <h4 class="name">Harvey Harrington</h4>
-                          <h6 class="designation">Senior Volunteer</h6>
+                          <h4 class="name">Leo Malinda Ganewatta</h4>
+                          <h6 class="designation">District President, Leo District 306 A1</h6>
                         </div>
                       </div>
                       <div class="swiper-slide testimonial-single">
@@ -451,7 +472,7 @@
                     src="assets/img/shape/3.png" alt="Image-Givest"></h2>
               </div>
               <div id="video_list" class="events-content events-list" data-aos="fade-up" data-aos-duration="1000">
-                
+
               </div>
             </div>
             <div class="col-8 offset-2 col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-4 offset-lg-0">
@@ -834,13 +855,13 @@
                   var thumb = data2.items[index].snippet.thumbnails.high.url;
                   html += '<div id="video_box" class="event-item">';
                   html += '<div class="thumb">';
-                  html += '  <img class="thumb-img" src="'+thumb+'" alt="Image-Givest">';
-                  html += '  <a href="'+youtubeLink+'" target="_blank" class="btn-theme btn-gradient btn-size-sm">Join Now <img';
+                  html += '  <img class="thumb-img" src="' + thumb + '" alt="Image-Givest">';
+                  html += '  <a href="' + youtubeLink + '" target="_blank" class="btn-theme btn-gradient btn-size-sm">Join Now <img';
                   html += '      class="icon icon-img" src="assets/img/icons/arrow-line-right.png" alt="Icon"></a>';
                   html += '</div>';
                   html += '<div class="content">';
-                  html += '  <div class="event-info"><span>'+date+'</span></div>';
-                  html += '  <h4 class="event-name"><a href="'+youtubeLink+'" target="_blank">'+title+'</a></h4>';
+                  html += '  <div class="event-info"><span>' + date + '</span></div>';
+                  html += '  <h4 class="event-name"><a href="' + youtubeLink + '" target="_blank">' + title + '</a></h4>';
                   html += '</div>';
                   html += '</div>   ';
                   $("#video_list").empty().append(html);
