create js files for slider and yourube

--- a/about.html
+++ b/about.html
@@ -424,9 +424,11 @@
 
 
           </div>
-          <a href="https://www.facebook.com/leoclubofmoratuwarathmalana/photos/?ref=page_internal" target="_blank">
-            <p class="text-center fs-5 mt-3 text-white"><u>See more projects</u></p>
-          </a>
+          <div class="d-flex justify-content-center">
+            <a href="https://www.facebook.com/leoclubofmoratuwarathmalana/photos/?ref=page_internal" class="btn-theme btn-gradient btn-slide">See More <img class="icon icon-img"
+                src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
+          </div>
+         
         </div>
       </section>
       <!--== End Gallery Area ==-->
