--- a/committee.html
+++ b/committee.html
@@ -137,59 +137,59 @@
       </section>
       <!--== End Team Area ==-->
 
-      <!--== Start Funfact Area ==-->
-      <section class="funfact-area funfact-default-area">
-        <div class="container">
-          <div class="row row-gutter-0 funfact-items-style1">
-            <div class="col-lg-4 funfact-item">
-              <div class="inner-content">
-                <div class="icon-box">
-                  <img class="icon" src="assets/img/icons/f1.png" alt="Image-Givest">
-                  <img class="shape-img" src="assets/img/shape/4.png" alt="Image-Givest">
+    <!--== Start Funfact Area ==-->
+    <section class="funfact-area funfact-default-area">
+      <div class="container">
+        <div class="row row-gutter-0 funfact-items-style1" data-aos="fade-up" data-aos-duration="1000">
+          <div class="col-sm-6 col-md-4 funfact-item">
+            <div class="inner-content">
+              <div class="icon-box">
+                <img class="icon" src="assets/img/icons/f1.png" alt="Image-Givest">
+                <img class="shape-img" src="assets/img/shape/4.png" alt="Image-Givest">
+              </div>
+              <div class="content">
+                <div class="number">
+                  <h2><span class="counter-animate">30</span>+</h2>
                 </div>
-                <div class="content">
-                  <div class="number">
-                    <h2><span class="counter-animate">598</span>K</h2>
-                  </div>
-                  <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Poor People</p>
-                </div>
+                <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
+                <p class="title">Active Members</p>
               </div>
             </div>
-            <div class="col-lg-4 funfact-item">
-              <div class="inner-content">
-                <div class="icon-box">
-                  <img class="icon" src="assets/img/icons/f2.png" alt="Image-Givest">
-                  <img class="shape-img" src="assets/img/shape/4.png" alt="Image-Givest">
+          </div>
+          <div class="col-sm-6 col-md-4 funfact-item">
+            <div class="inner-content">
+              <div class="icon-box">
+                <img class="icon" src="assets/img/icons/f2.png" alt="Image-Givest">
+                <img class="shape-img" src="assets/img/shape/4.png" alt="Image-Givest">
+              </div>
+              <div class="content">
+                <div class="number">
+                  <h2><span class="counter-animate">50</span>+</h2>
                 </div>
-                <div class="content">
-                  <div class="number">
-                    <h2><span class="counter-animate">897</span>M</h2>
-                  </div>
-                  <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Fund raised</p>
-                </div>
+                <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
+                <p class="title">Projects</p>
               </div>
             </div>
-            <div class="col-lg-4 funfact-item">
-              <div class="inner-content">
-                <div class="icon-box">
-                  <img class="icon" src="assets/img/icons/f3.png" alt="Image-Givest">
-                  <img class="shape-img" src="assets/img/shape/4.png" alt="Image-Givest">
+          </div>
+          <div class="col-sm-6 col-md-4 funfact-item">
+            <div class="inner-content">
+              <div class="icon-box">
+                <img class="icon" src="assets/img/icons/f3.png" alt="Image-Givest">
+                <img class="shape-img" src="assets/img/shape/4.png" alt="Image-Givest">
+              </div>
+              <div class="content">
+                <div class="number">
+                  <h2><span class="counter-animate">50</span>+</h2>
                 </div>
-                <div class="content">
-                  <div class="number">
-                    <h2><span class="counter-animate">998</span>+</h2>
-                  </div>
-                  <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Active Member</p>
-                </div>
+                <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
+                <p class="title">Awards</p>
               </div>
             </div>
           </div>
         </div>
-      </section>
-      <!--== End Funfact Area ==-->
+      </div>
+    </section>
+    <!--== End Funfact Area ==-->
 
       <!--== Start Brand Logo Area ==-->
       <section class="brand-logo-area brand-logo-default-area">
