--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
   <!--== Bootstrap CSS ==-->
   <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!--== Icofont CSS ==-->
   <link href="assets/css/icofont.css" rel="stylesheet" />
   <!--== ElegantIcons CSS ==-->
@@ -35,6 +36,7 @@
   <link href="assets/css/style.css" rel="stylesheet" />
   <link href="assets/css/custom.css" rel="stylesheet" />
   <link href="assets/css/slider.css" rel="stylesheet" />
+  
 
 </head>
 
@@ -169,7 +171,7 @@
       <section class="service-area service-default-area">
         <div class="container">
           <div class="row icon-box-style1" data-aos="fade-up" data-aos-duration="1000">
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-4 col-lg-4 col-sm-4 col-4">
               <div class="icon-box-item item-one mb-md-30">
                 <div class="icon-box-top">
                   <div class="icon-box">
@@ -194,7 +196,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-4 col-lg-4 col-sm-4 col-4">
               <div class="icon-box-item item-two mb-md-30">
                 <div class="icon-box-top">
                   <div class="icon-box">
@@ -220,7 +222,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-6 col-lg-4">
+            <div class="col-md-4 col-lg-4 col-sm-4 col-4">
               <div class="icon-box-item item-three">
                 <div class="icon-box-top">
                   <div class="icon-box">
@@ -467,10 +469,12 @@
           <div class="row">
             <div class="col-lg-8">
               <div class="section-title" data-aos="fade-up" data-aos-duration="1000">
-                <h5 class="subtitle line-theme-color mb-7">Recent Videos</h5>
-                <h2 class="title title-style">Join Recent Fundraising Event Of Givest. <img class="img-shape"
+                <h5 class="subtitle line-theme-color mb-7">youtube </h5>
+                <i class="fa fa-youtube-play" style="font-size:30px;color:red"></i>
+                
+                <h2 class="title title-style">Join with Our Official Youtube Channel <img class="img-shape"
                     src="assets/img/shape/3.png" alt="Image-Givest"></h2>
-              </div>
+                </div>
               <div id="video_list" class="events-content events-list" data-aos="fade-up" data-aos-duration="1000">
 
               </div>
