--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           <div class="row" data-aos="fade-up" data-aos-duration="1000" id="blog_post_list">
 
           </div>
-          <div class="d-flex justify-content-center">
+          <div class="mt-3 pt-3 d-flex justify-content-center">
             <a href="projects.html" class="btn-theme btn-gradient btn-slide">See More <img class="icon icon-img"
                 src="assets/img/icons/arrow-line-right2.png" alt="Icon"></a>
           </div>
