added lion cyrill testimonial

--- a/index.html
+++ b/index.html
@@ -377,19 +377,21 @@
                       <div class="swiper-slide testimonial-single">
                         <div class="client-thumb-wrp">
                           <div class="client-thumb">
-                            <img src="assets/img/testimonial/2.png" alt="Image-Givest">
+                            <img src="assets/img/testimonial/2.jpg" alt="Image-Givest">
                           </div>
                           <div class="quote-icon">“</div>
                         </div>
                         <div class="client-content">
-                          <p>It is long established fact that reader will distract by the readable content a page when
-                            looking
-                            atten layout. The point of using and that it has a normal distribution of letters</p>
+                          <p>The Leo Club of Moratuwa-Ratmalana has produced 4 District Presidents during the past 52 years. I am delighted to
+                          mention that along with a new group of members supporting them guided by their Leo Advisor Lion Nishantha Region
+                          Chairman, they brought the lost glory once again to the Leo Club. Leo Tharindu, Leo Baratha and Leo Sasindu are three
+                          members who were in Shehan's dynamic team in 2017. They have developed a team for succession which will avoid inactive
+                          periods experienced in the past.</p>
                         </div>
                         <div class="client-info">
                           <img class="shape-line-img" src="assets/img/shape/line-t1.png" alt="Image-Givest">
-                          <h4 class="name">Julia Steve</h4>
-                          <h6 class="designation">Senior Volunteer</h6>
+                          <h4 class="name">Lion Cyril Wickramaratne</h4>
+                          <h6 class="designation">Past Leo Advisor & Past District Chairman for Leos</h6>
                         </div>
                       </div>
                     </div>
