remove events and do some other changes

--- a/about.html
+++ b/about.html
@@ -74,7 +74,7 @@
               <li ><a href="index.html">Home</a></li>
               <li class="active"><a href="about.html">About Us</a></li>
               <li><a href="projects.html">Projects</a></li>
-              <li><a href="event-details.html">Events</a></li>
+              <!-- <li><a href="event-details.html">Events</a></li> -->
               <li><a href="committee.html">Committee</a>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -339,7 +339,7 @@
       <!--== End Funfact Area ==-->
 
       <!--== Start Gallery Area ==-->
-      <section class="testimonial-area testimonial-default-area bgcolor-theme3">
+      <section class="gallery-area gallery-default-area bgcolor-theme3">
         <div class="container">
           <div class="section-title">
             <h2 class="title text-white"><span>Gallery</span> </h2>
@@ -576,7 +576,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="event-details.html">Events</a></li>
+                        <!-- <li><a href="event-details.html">Events</a></li> -->
                         <li><a href="committee.html">Committee</a></li>
                         <li><a href="contact.html">Contact US</a></li>
                       </ul>
