--- a/committee.html
+++ b/committee.html
@@ -73,7 +73,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li ><a href="about.html">About Us</a></li>
                   <li><a href="projects.html">Projects</a></li>
-                  <li><a href="event-details.html">Events</a></li>
+                  <!-- <li><a href="event-details.html">Events</a></li> -->
                   <li class="active"><a href="committee.html">Committee</a>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -194,7 +194,7 @@
       <!--== Start Brand Logo Area ==-->
       <section class="brand-logo-area brand-logo-default-area">
         <div class="container">
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-4 offset-lg-0 col-xl-4">
               <div class="section-title text-center text-lg-start">
                 <h2 class="title title-style mt-xl-30">Our Current Sponsors. <img class="img-shape"
@@ -257,7 +257,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!--== End Brand Logo Area ==-->
@@ -334,7 +334,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="event-details.html">Events</a></li>
+                        <!-- <li><a href="event-details.html">Events</a></li> -->
                         <li><a href="committee.html">Committee</a></li>
                         <li><a href="contact.html">Contact US</a></li>
                       </ul>
