--- a/contact.html
+++ b/contact.html
@@ -125,8 +125,8 @@
                         <div class="section-title">
                           <h5 class="subtitle line-theme-color">Contact Now</h5>
                           <h2 class="title">Get In Touch.</h2>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting typesetting remaining
-                            essentially unchanged.</p>
+                          <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting typesetting remaining
+                            essentially unchanged.</p> -->
                         </div>
                       </div>
                     </div>
@@ -196,7 +196,7 @@
                       <div class="content">
                         <h4>Address</h4>
                         <img class="line-icon" src="assets/img/shape/line-s1.png" alt="Image-Givest">
-                        <p>Norwegian St #APT 807 <br>Pottsville, Pennsya (PA)</p>
+                        <p>5 Sirimal Uyana,  <br>Dehiwala-Mount Lavinia</p>
                       </div>
                     </div>
                   </div>
@@ -283,7 +283,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="event-details.html">Events</a></li>
+                        <!-- <li><a href="event-details.html">Events</a></li> -->
                         <li><a href="committee.html">Committee</a></li>
                         <li><a href="contact.html">Contact US</a></li>
                       </ul>
