--- a/application.html
+++ b/application.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Become Volunteer – Givest – Non Profit Bootstrap 5 HTML Template</title>
+  <title>Become Volunteer</title>
 
   <!--== Favicon ==-->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
@@ -73,7 +73,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li ><a href="about.html">About Us</a></li>
                   <li><a href="projects.html">Projects</a></li>
-                  <li><a href="event-details.html">Events</a></li>
+                  <!-- <li><a href="event-details.html">Events</a></li> -->
                   <li><a href="committee.html">Committee</a>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -96,7 +96,7 @@
 
     <main class="main-content site-wrapper-reveal">
       <!--== Start Page Title Area ==-->
-      <section class="page-title-area" data-bg-img="assets/img/photos/bg-page-title.jpg">
+      <!-- <section class="page-title-area" data-bg-img="assets/img/photos/bg-page-title.jpg">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -108,7 +108,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!--== End Page Title Area ==-->
 
       <!--== Start Volunteer Form Area ==-->
@@ -120,10 +120,10 @@
                 <div class="section-title">
                   <h5 class="subtitle">Join With Us</h5>
                   <h2 class="title">If You Interest! You Can Join With Us <span>As A Volunteer.</span></h2>
-                  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                  <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
                     industry's standard dummy text ever since 1500 an when an unknown printer took a galley of type and
                     scrambled it to make a type specimen book. It has survived not only five centuries but electronic
-                    typesetting, remaining essentially unchanged.</p>
+                    typesetting, remaining essentially unchanged.</p> -->
                 </div>
                 <form class="volunteer-form-wrapper" id="contact-form"
                   action="http://whizthemes.com/mail-php/raju/arden/mail.php" method="post">
@@ -186,10 +186,10 @@
 
 
       <!--== Start Funfact Area ==-->
-      <section class="funfact-area funfact-default-area">
+      <!-- <section class="funfact-area funfact-default-area">
         <div class="container">
-          <div class="row row-gutter-0 funfact-items-style1">
-            <div class="col-lg-4 funfact-item">
+          <div class="row row-gutter-0 funfact-items-style1" data-aos="fade-up" data-aos-duration="1000">
+            <div class="col-sm-6 col-md-4 funfact-item">
               <div class="inner-content">
                 <div class="icon-box">
                   <img class="icon" src="assets/img/icons/f1.png" alt="Image-Givest">
@@ -197,14 +197,14 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">598</span>K</h2>
+                    <h2><span class="counter-animate">30</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Poor People</p>
+                  <p class="title">Active Members</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 funfact-item">
+            <div class="col-sm-6 col-md-4 funfact-item">
               <div class="inner-content">
                 <div class="icon-box">
                   <img class="icon" src="assets/img/icons/f2.png" alt="Image-Givest">
@@ -212,14 +212,14 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">897</span>M</h2>
+                    <h2><span class="counter-animate">50</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Fund raised</p>
+                  <p class="title">Projects</p>
                 </div>
               </div>
             </div>
-            <div class="col-lg-4 funfact-item">
+            <div class="col-sm-6 col-md-4 funfact-item">
               <div class="inner-content">
                 <div class="icon-box">
                   <img class="icon" src="assets/img/icons/f3.png" alt="Image-Givest">
@@ -227,22 +227,22 @@
                 </div>
                 <div class="content">
                   <div class="number">
-                    <h2><span class="counter-animate">998</span>+</h2>
+                    <h2><span class="counter-animate">50</span>+</h2>
                   </div>
                   <img class="line-shape" src="assets/img/shape/funfact-line1.png" alt="Image-Givest">
-                  <p class="title">// Active Member</p>
+                  <p class="title">Awards</p>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
       <!--== End Funfact Area ==-->
 
       <!--== Start Brand Logo Area ==-->
       <section class="brand-logo-area brand-logo-default-area">
         <div class="container">
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-4 offset-lg-0 col-xl-4">
               <div class="section-title text-center text-lg-start">
                 <h2 class="title title-style mt-xl-30">Our Current Sponsors. <img class="img-shape"
@@ -305,7 +305,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!--== End Brand Logo Area ==-->
@@ -322,56 +322,52 @@
                   <a class="footer-logo" href="index.html">
                     <img src="assets/img/logo.png" alt="Logo">
                   </a>
-                  <p>Lorem Ipsum is simply dummy text of the industry orem Ipsum has been the industry's since the when
-                    unknown.</p>
-                  <div class="widget-total-raised">
-                    <h4 class="raised-title">Total Raised:</h4>
-                    <div class="raised-amount">$8,965</div>
-                  </div>
+                  <p>The Moratuwa-Rathmalana Leo Club is one of the greatest in Leo District 306 A1, founded on June 12,
+                    1970.</p>
+                  <p>Leo Club of Moratuwa-Rathamalana has been serving the community for over 50 years.</p>
+                  <!-- <div class="widget-total-raised">
+                            <h4 class="raised-title">Total Raised:</h4>
+                            <div class="raised-amount">$8,965</div>
+                          </div> -->
                 </div>
               </div>
             </div>
             <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4">
               <div class="widget-item">
-                <h4 class="widget-title line-style">Gallery</h4>
+                <h4 class="widget-title line-style">Social Media</h4>
                 <div class="widget-gallery">
                   <div class="row row-cols-3 row-gutter-10">
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery1.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.facebook.com/leoclubofmoratuwarathmalana"><i
+                            class="icofont-facebook"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery2.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.linkedin.com/company/leo-club-of-moratuwa-ratmalana"><i
+                            class="icofont-linkedin"></i></a>
                       </div>
                     </div>
+                    <div></div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery3.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.instagram.com/mr_leos_/"><i class="icofont-instagram"></i></a>
                       </div>
                     </div>
                     <div class="col">
                       <div class="gallery-item">
                         <img src="assets/img/photos/gallery4.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
+                        <a class="icon" href="https://www.youtube.com/channel/UCjj_tHYJgEfiUk3FwWzN-VQ"><i
+                            class="icofont-youtube"></i></a>
                       </div>
                     </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery5.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
-                    <div class="col">
-                      <div class="gallery-item">
-                        <img src="assets/img/photos/gallery6.jpg" alt="Givest-HasTech">
-                        <a class="icon" href="#/"><i class="icofont-instagram"></i></a>
-                      </div>
-                    </div>
+    
+                    <div></div>
+    
                   </div>
                 </div>
               </div>
@@ -383,24 +379,24 @@
                   <div class="row">
                     <div class="col-6 col-sm-6 col-md-6 pr-sm-5">
                       <ul class="nav-menu nav">
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
-                        <li><a href="blog.html">Blog Post Terms</a></li>
-                        <li><a href="#/">Conditions</a></li>
-                        <li><a href="#/">Privacy Policy</a></li>
-                        <li><a href="#/">Documentation</a></li>
-                        <li><a href="#/">Donners</a></li>
+                        <li><a href="projects.html">Projects</a></li>
+                        <!-- <li><a href="event-details.html">Events</a></li> -->
+                        <li><a href="committee.html">Committee</a></li>
+                        <li><a href="contact.html">Contact US</a></li>
                       </ul>
                     </div>
-                    <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
-                      <ul class="nav-menu nav align-right">
-                        <li><a href="volunteer.html">Become Volunteer</a></li>
-                        <li><a href="#/">Quick Fundraise</a></li>
-                        <li><a href="#/">Give Donation</a></li>
-                        <li><a href="volunteer.html">Become Volunteer</a></li>
-                        <li><a href="causes-details.html">Food And Water</a></li>
-                        <li><a href="causes-details.html">Medical facilities</a></li>
-                      </ul>
-                    </div>
+                    <!-- <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
+                              <ul class="nav-menu nav align-right">
+                                <li><a href="volunteer.html">Become Volunteer</a></li>
+                                <li><a href="#/">Quick Fundraise</a></li>
+                                <li><a href="#/">Give Donation</a></li>
+                                <li><a href="volunteer.html">Become Volunteer</a></li>
+                                <li><a href="causes-details.html">Food And Water</a></li>
+                                <li><a href="causes-details.html">Medical facilities</a></li>
+                              </ul>
+                            </div> -->
                   </div>
                 </nav>
               </div>
@@ -416,8 +412,8 @@
             <div class="row align-items-center">
               <div class="col-12">
                 <div class="widget-copyright text-center">
-                  <p>© 2025 <span>Givest</span>. Made with <i class="icon_heart"></i> by <a target="_blank"
-                      href="https://www.hasthemes.com">HasThemes</a></p>
+                  <p>copyright © 2021 <span>Leo Club of Moratuwa Ratmalana</span> | <a target="_blank"
+                      href="https://www.leos.moratuwaratmalana.lk">Developed MRLeos IT Team</a></p>
                 </div>
               </div>
             </div>
