--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <li class="active"><a href="index.html">Home</a></li>
                   <li><a href="about.html">About Us</a></li>
                   <li><a href="projects.html">Projects</a></li>
-                  <li><a href="event-details.html">Events</a></li>
+                  <!-- <li><a href="event-details.html">Events</a></li> -->
                   <li><a href="committee.html">Committee</a>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -678,7 +678,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="event-details.html">Events</a></li>
+                        <!-- <li><a href="event-details.html">Events</a></li> -->
                         <li><a href="committee.html">Committee</a></li>
                         <li><a href="contact.html">Contact US</a></li>
                       </ul>
