--- a/project-details.html
+++ b/project-details.html
@@ -73,7 +73,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li ><a href="about.html">About Us</a></li>
                   <li class="active"><a href="projects.html">Projects</a></li>
-                  <li><a href="event-details.html">Events</a></li>
+                  <!-- <li><a href="event-details.html">Events</a></li> -->
                   <li><a href="committee.html">Committee</a>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
