--- a/projects.html
+++ b/projects.html
@@ -73,7 +73,7 @@
                   <li><a href="index.html">Home</a></li>
                   <li ><a href="about.html">About Us</a></li>
                   <li class="active"><a href="projects.html">Projects</a></li>
-                  <li><a href="event-details.html">Events</a></li>
+                  <!-- <li><a href="event-details.html">Events</a></li> -->
                   <li><a href="committee.html">Committee</a>
                   <li><a href="contact.html">Contact Us</a></li>
                 </ul>
@@ -410,8 +410,8 @@
             <div class="col-md-12 col-lg-4 col-xl-5">
               <div class="title-wrp" data-bg-img="assets/img/testimonial/bg-testi1.jpg">
                 <div class="section-title">
-                  <h5 class="subtitle line-white-color text-white mb-7">Recent Events</h5>
-                  <h2 class="title title-style text-white">What People Say About Us. <img class="img-shape"
+                  <h5 class="subtitle line-white-color text-white mb-7">Testimonials</h5>
+                  <h2 class="title title-style text-white">A Good Feedback Always Matters. <img class="img-shape"
                       src="assets/img/shape/3.png" alt="Image-Givest"></h2>
                 </div>
               </div>
@@ -424,37 +424,46 @@
                       <div class="swiper-slide testimonial-single">
                         <div class="client-thumb-wrp">
                           <div class="client-thumb">
-                            <img src="assets/img/testimonial/1.png" alt="Image-Givest">
+                            <img src="assets/img/testimonial/1.jpg" alt="Image-Givest">
                           </div>
                           <div class="quote-icon">“</div>
                         </div>
                         <div class="client-content">
-                          <p>The leap into electronic typesetting, essentially unchanged was popularised the release
-                            Letraset sheets containing and more recently desktop publishing like Aldus maker including.
-                          </p>
+                          <p>Leo club of Moratuwa-Rathmalana is one of the longest standing clubs in the history of
+                            Leoism in Sri Lanka, now its even
+                            stronger with its new member base after its reactivation in 2020/2021, and under the
+                            Leadership of Leo Baratha
+                            Aberathna for the year 2021/2022, the club has set forth many initiatives and its on the
+                            path to greater heights.</p>
                         </div>
                         <div class="client-info">
                           <img class="shape-line-img" src="assets/img/shape/line-t1.png" alt="Image-Givest">
-                          <h4 class="name">Harvey Harrington</h4>
-                          <h6 class="designation">Senior Volunteer</h6>
+                          <h4 class="name">Leo Malinda Ganewatta</h4>
+                          <h6 class="designation">District President, Leo District 306 A1</h6>
                         </div>
                       </div>
                       <div class="swiper-slide testimonial-single">
                         <div class="client-thumb-wrp">
                           <div class="client-thumb">
-                            <img src="assets/img/testimonial/2.png" alt="Image-Givest">
+                            <img src="assets/img/testimonial/2.jpg" alt="Image-Givest">
                           </div>
                           <div class="quote-icon">“</div>
                         </div>
                         <div class="client-content">
-                          <p>It is long established fact that reader will distract by the readable content a page when
-                            looking atten layout. The point of using and that it has a normal distribution of letters
-                          </p>
+                          <p>The Leo Club of Moratuwa-Ratmalana has produced 4 District Presidents during the past 52 years. I
+                            am delighted to
+                            mention that along with a new group of members supporting them guided by their Leo Advisor Lion
+                            Nishantha Region
+                            Chairman, they brought the lost glory once again to the Leo Club. Leo Tharindu, Leo Baratha and
+                            Leo Sasindu are three
+                            members who were in Shehan's dynamic team in 2017. They have developed a team for succession which
+                            will avoid inactive
+                            periods experienced in the past.</p>
                         </div>
                         <div class="client-info">
                           <img class="shape-line-img" src="assets/img/shape/line-t1.png" alt="Image-Givest">
-                          <h4 class="name">Julia Steve</h4>
-                          <h6 class="designation">Senior Volunteer</h6>
+                          <h4 class="name">Lion Cyril Wickramaratne</h4>
+                          <h6 class="designation">Past Leo Advisor & Past District Chairman for Leos</h6>
                         </div>
                       </div>
                     </div>
@@ -477,7 +486,7 @@
       <!--== Start Brand Logo Area ==-->
       <section class="brand-logo-area brand-logo-default-area">
         <div class="container">
-          <div class="row">
+          <!-- <div class="row">
             <div class="col-sm-8 offset-sm-2 col-md-8 offset-md-2 col-lg-4 offset-lg-0 col-xl-4">
               <div class="section-title text-center text-lg-start">
                 <h2 class="title title-style mt-xl-30">Our Current Sponsors. <img class="img-shape"
@@ -540,7 +549,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
       <!--== End Brand Logo Area ==-->
@@ -617,7 +626,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="about.html">About Us</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="event-details.html">Events</a></li>
+                        <!-- <li><a href="event-details.html">Events</a></li> -->
                         <li><a href="committee.html">Committee</a></li>
                         <li><a href="contact.html">Contact US</a></li>
                       </ul>
