chnage some spelling mistakes and css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>MRLeos – Leo Club of Moratuwa Ratmalana</title>
+  <title>MRLeos – Leo Club of Moratuwa-Ratmalana</title>
 
   <!--== Favicon ==-->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon" />
@@ -680,7 +680,7 @@
                         <li><a href="projects.html">Projects</a></li>
                         <!-- <li><a href="event-details.html">Events</a></li> -->
                         <li><a href="committee.html">Committee</a></li>
-                        <li><a href="contact.html">Contact US</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                     <!-- <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
