--- a/application.html
+++ b/application.html
@@ -384,7 +384,7 @@
                         <li><a href="projects.html">Projects</a></li>
                         <!-- <li><a href="event-details.html">Events</a></li> -->
                         <li><a href="committee.html">Committee</a></li>
-                        <li><a href="contact.html">Contact US</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                       </ul>
                     </div>
                     <!-- <div class="col-6 col-sm-6 col-md-6 pl-sm-5">
